--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -16,6 +16,7 @@
             android:id="@+id/historyRecyclerview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginBottom="83dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
