--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -273,11 +273,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:enabled="false"
                 android:fontFamily="@font/oswaldregular"
                 android:hint="5"
                 android:inputType="number"
-                android:text="1" />
+                android:text="" />
 
         </LinearLayout>
 
